fixed spacing on index page

--- a/public/style.css
+++ b/public/style.css
@@ -196,8 +196,6 @@ b{
   color: rgb(118, 190, 210);
 }
 
-
-
 .question{
   font-size: 30px;
   margin-bottom: 10px;
@@ -218,6 +216,9 @@ b{
   color: red;
   text-align:center;
   vertical-align: middle;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
 }
 
 .form-control{
@@ -227,23 +228,11 @@ b{
 
 }
 
-.input-group{
-  width: 1000px;
-  justify-content: center;
-  text-align: center;
-  align-items: center;
-  padding-left: 280px;
-  vertical-align: center;
+div.input-group{
+padding-left: 300px;
+padding-right: 300px;
 }
 
-div.box-login{
-  display: block;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    justify-content: end;
-    vertical-align: middle;
-}
 
 div.about-container{
   height: 500px;
@@ -262,3 +251,8 @@ div.about-container p{
   justify-content:center;
 }
 
+.form-control{
+  width: 100%;
+  flex-direction: column;
+  color: #04AA6D;
+}
